# sentinel-arc

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  clippy.toml  rename.py  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  release.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: cli.rs  main.rs
crates/cli/src/handlers/: completion.rs  context.rs  doctor.rs  graph.rs  init.rs  mcp.rs  mod.rs  rebuild_index.rs  scan.rs  search.rs  stats.rs  timeline.rs  validate.rs  version.rs
crates/cli/tests/: cli_tests.rs
crates/context/: Cargo.toml
crates/context/src/: discovery.rs  engine.rs  enrichment.rs  expansion.rs  impact.rs  lib.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  traits.rs
crates/core/src/domain/: brain_card.rs  context_package.rs  event.rs  node.rs  relationship.rs  rule.rs  search.rs
crates/core/src/types/: event_type.rs  ids.rs  node_type.rs  relationship_type.rs  source.rs
crates/graph/: Cargo.toml
crates/graph/src/: engine.rs  lib.rs  projection.rs
crates/knowledge/: Cargo.toml
crates/knowledge/examples/: knowledge_engine_basics.rs
crates/knowledge/migrations/: 001_create_nodes.sql  002_create_relationships.sql  003_create_events.sql  004_create_rules.sql  005_create_plugin_data.sql
crates/knowledge/src/: database.rs  lib.rs  repository.rs  search_repository.rs  test_utils.rs
crates/knowledge/src/engine/: event_engine.rs  knowledge_engine.rs  node_engine.rs  relationship_engine.rs  rule_engine.rs  search_engine.rs
crates/knowledge/src/store/: event_store.rs  node_store.rs  relationship_store.rs  rule_store.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: config.rs  errors.rs  lib.rs  server.rs  transport.rs  types.rs
crates/mcp/src/handlers/: mod.rs  prompts.rs  resources.rs  tools.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: cache.rs  config.rs  engine.rs  lib.rs
crates/scanner/src/languages/: mod.rs  rust.rs
crates/timeline/: Cargo.toml
crates/timeline/src/: engine.rs  lib.rs  types.rs
crates/validation/: Cargo.toml
crates/validation/src/: context.rs  engine.rs  lib.rs  types.rs
crates/validation/src/validators/: graph.rs  integrity.rs  mod.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_PRINCIPLES.md  ci_cd.md  cli.md  documentation_audit.md  faq.md  final_release_audit.md  getting_started.md  mcp.md  mcp_setup.md  phase2_audit.md  phase3_final_audit.md  release_hotfix_report.md  release_notes_v1.0.0.md  repository_audit.md  troubleshooting.md  v1.0_release_report.md  v1_rc_validation.md  v1_release_checklist.md
docs/adr/: ADR-001-repository-pattern.md  ADR-002-event-engine.md  ADR-003-knowledge-engine.md
docs/architecture/: engines.md  events.md  repository.md  system.md  transactions.md
docs/cli/: README.md
docs/design/: roadmap.md  ui.md
docs/development/: architecture.md  building.md  coding-style.md  debugging.md  faq.md  release-process.md  repository-layout.md  setup.md  testing.md  troubleshooting.md
examples/: context_example.sh  graph_example.sh  mcp_example.sh  scanner_example.sh  search_example.sh  timeline_example.sh  validation_example.sh
examples/cli/: README.md
examples/windows/: context_example.ps1  graph_example.ps1  mcp_example.ps1  scanner_example.ps1  search_example.ps1  timeline_example.ps1  validation_example.ps1
scripts/: setup.ps1  setup.sh
