[workspace]
resolver = "2"

members = ["crates/cli","crates/context",
    "crates/core", "crates/graph",
    "crates/knowledge", "crates/scanner", "crates/validation",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/Chandann1905/sentinel-arc"
homepage = "https://github.com/Chandann1905/sentinel-arc"
documentation = "https://github.com/Chandann1905/sentinel-arc"
description = "An embedded, transactional state-management and event-sourcing engine built in Rust."
keywords = ["state-management", "event-sourcing", "sqlite", "knowledge-graph", "agent"]
categories = ["database", "data-structures"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"

# Full-text search
tantivy = "0.22"

# Internal crates
sentinel-arc-core = { path = "crates/core" }
sentinel-arc-knowledge = { path = "crates/knowledge" }
sentinel-arc-graph = { path = "crates/graph" }
sentinel-arc-context = { path = "crates/context" }
sentinel-arc-scanner = { path = "crates/scanner" }
sentinel-arc-validation = { path = "crates/validation" }
sentinel-cli = { path = "crates/cli" }

# Graph
petgraph = "0.6"

# Scanner & AST
ignore = "0.4"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
sha2 = "0.10"
