[package]
name = "sentinel-arc-context"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sentinel-arc-core.workspace = true
sentinel-arc-knowledge.workspace = true
sentinel-arc-graph.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.10"
