[package]
name = "sentinel-arc-knowledge"
description = "Knowledge Layer: SQLite storage for nodes, relationships, events, and rules"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sentinel-arc-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# SQLite via SQLx
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "chrono", "derive"] }

# Full-text search
tantivy = { workspace = true }

[dev-dependencies]
tempfile = "3"
