[package]
name = "sentinel-arc-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Model Context Protocol (MCP) Server for Sentinel Arc."

[dependencies]
# Workspace Internal
sentinel-arc-core = { workspace = true }
sentinel-arc-knowledge = { workspace = true }
sentinel-arc-context = { workspace = true }
sentinel-arc-graph = { workspace = true }
sentinel-arc-scanner = { workspace = true }
sentinel-arc-timeline = { workspace = true }
sentinel-arc-validation = { workspace = true }

# Async & Serialization
tokio = { workspace = true, features = ["io-util", "io-std", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
