[package]
name = "sentinel-arc-timeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Timeline generation engine for Sentinel Arc."
keywords.workspace = true
categories.workspace = true

[dependencies]
sentinel-arc-core = { workspace = true }
sentinel-arc-knowledge = { workspace = true }

chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
